# VisuGPS

./: .gitattributes  .gitignore  ANNEXE_PARAMETRES.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PLAN_MESSAGES.md  PLAN_SETTINGS.md  README.md  UserGuide.md  analyze-gpx-overlaps.js  clean.bat  clean.sh  index.html  package-lock.json  package.json  recompile.bat  recompile.sh  snackbar_messages_editview.md  snackbar_messages_mainview.md  snackbar_messages_visualizeview.md  start_dev.bat  start_dev.sh  start_dev_hp.bat  update-build-date.js  vite.config.js
docs/DocAnnexe/: AltitudeAlgo.md  (+4 more)
documentation/: ANALYSE_ANIMATION.md  USER_GUIDE_COMMUNES.md  VisuGPS_Code_Analysis.md  VisuGPS_Project_Analysis.md  VisualizeView_summary.md  animation_automate.md  calcul_cap_final.md  generation_points_100m.md  gestion_vitesse_zoom.md  maj_communes_settings.md  moyenne_cap.md  remote_control_analysis.md  remote_interface_spec.md
public/: messages_default.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  circuitsDefault.json  envDefault  settings.default.json  settings.json  settingsDefault.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: colors.rs  communes_updater.rs  distance_markers.rs  error_logger.rs  event.rs  geo_processor.rs  gpx_processor.rs  import_export.rs  lib.rs  main.rs  network_utils.rs  remote_blacklist.rs  remote_clients.rs  remote_control.rs  remote_setup.rs  segment_analyzer.rs  settings_migration.rs  thumbnail_generator.rs  trace_style.rs  tracking_processor.rs  weather_cache.rs
vscode/: tasks.json
(+360 files in other folders)
