[package]
name = "visugps"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "visugps_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-process = "2.3.0"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
quick-xml = { version = "0.36", features = ["serialize"] }
geojson = "0.24.1"
geo = "0.28.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
polyline = "0.10"
percent-encoding = "2.3"
once_cell = "1.19"
qrcode = { version = "0.14", features = ["image"] }
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"
lazy_static = "1.4.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
